@startuml Diagramme de Classe Store Manager 

    class Client {
        id
        nom 
        prenom
        adresse
        email 
        limiteCredit
    }

    class Commande {
        id
        montant
        montantVerse
        dateCommande
    }

    class LigneCommande {
        id 
        qte 
        montant
    }

    class Approvisionnement {
        id
        refBL
        qteAchat
        qteReçu
        montant
    }

    class Fournisseur {
        id 
        nom
        telephone
        adresse
        email
    }

    class Paiement {
        id 
        montant 
        date
    }

    class Dette {
        id 
        date 
        montantInitial
    }

    class Article {
        id 
        libelle 
        qteStock 
        prixUnitaire
    }

    class ModePaiement {
        id 
        nom
    }

    class Reglement {
        id 
        nom 
    }

    class LigneApprovisionnement {
        id 
        qte 
        montant 
    }

    class Utilisateur {
        id 
        nom 
        prenom 
        email 
        password 
    }

    class Role {
        id 
        nom
    }


    Client "1"--"0..*" Commande
    Commande "1"--"0..*" LigneCommande
    Commande "1"--"0..*" Dette
    Commande "0..*"--"1" Reglement
    LigneCommande "0..*"--"1" Article
    Paiement "0..*"--"1" Dette
    Paiement "0..*"--"1" ModePaiement
    Fournisseur "1"--"0..*" Approvisionnement
    Fournisseur "1"--"0..*" Article
    Approvisionnement "1"--"0..*" LigneApprovisionnement
    LigneApprovisionnement "0..*"--"1" Article
    Utilisateur "0..*"--"1" Role
    Utilisateur "1"--"0..*" Commande : enregistre
    Utilisateur "1"--"0..*" Dette : gere
    Utilisateur "1"--"0..*" Approvisionnement : gere
    Utilisateur "1"--"0..*" Article : gere

@enduml